# pdf-tool

./: .gitignore  README.md  pyproject.toml  setup.py
pdf_tool/: cli.py  cli_validators.py  compress.py  contrast.py  info.py  reorganize.py  split.py  util.py
